# python-project-50

./: Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  default-check.yml
gendiff/: __init__.py  build_diff.py  cli.py  const.py  generate_diff.py  generator.py  pars.py  reader.py
gendiff/formaters/: __init__.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py  main.py
script/: build_diff.py  gendiff.py  pars.py
script/formaters/: plain.py  stylish.py
tests/: test_gendiff.py  test_generate_diff.py
