[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Gamabyta24 <Gamabyta@gmail.com>"]
readme = "README.md"
packages = [
    { include = "script" },
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.scripts]
gendiff = "script.gendiff:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
